--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
         google()
     }
     dependencies {
-    	classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.10")
+    	classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.20")
 	}
 }
 
@@ -15,7 +15,7 @@ allprojects {
 	}
 	tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
 		kotlinOptions {
-			jvmTarget = "11"
+			jvmTarget = "17"
 		}
 	}
 }
@@ -26,7 +26,7 @@ subprojects {
 		repositories {
 			maven {
 				name = "GitHubPackages"
-				url = uri("https://maven.pkg.github.com/dk96-os/java-project")
+				url = uri("https://maven.pkg.github.com/dk96-os/css-reader")
 				credentials {
 					username = System.getenv("GITHUB_ACTOR")
 					password = System.getenv("GITHUB_TOKEN")
