Build Updates: * Update Reader Module build.gradle - fix artifact name

--- a/reader/build.gradle
+++ b/reader/build.gradle
@@ -21,7 +21,7 @@ publishing {
             groupId = "io.github.dk96-os.css-reader"
             artifactId = "reader"
             apply from: "../artifacts.gradle"
-            version = artifactVersions.arrays
+            version = artifactVersions.reader
             from components.java
         }
     }
